# safeai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: rules.md
safeai/: __init__.py  __version__.py  analyzer.py  cli.py
safeai/rules/: __init__.py  base.py  python_rules.py
safeai/utils/: __init__.py  ast_helper.py  file_loader.py  formatter.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_rules.py
tests/fixtures/: safe_code.py  vulnerable_code.py
